--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
             <div class="contact-section">
                 <h2>Find me</h2>
                 <div class="social">
-                    <a href="#">f</a>
-                    <a href="#">vk</a>
-                    <a href="#">in</a>
-                    <a href="#">g</a>
+                    <a href="#" class="facebook"></a>
+                    <a href="#" class="vk"></a>
+                    <a href="#" class="linkedin"></a>
+                    <a href="#" class="gmail"></a>
                 </div>
 
             </div>
@@ -433,6 +433,8 @@
                 <li>sansanetch@gamil.com</li>
             </div>
         </div>
+        <div class="copyright">&copy; Aliaksandr Stukachou</div>
+        <div class="copyright-additional">All rights reserved.</div>
     </footer>
     <div class="left-header">
         <div class="header-wrapper">
