--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                         <div class="first-section--content-statistic-item">
-                            <span>63</span><strong>Skills</strong><div class="corner corner-left corner-top"></div>
+                            <span>20</span><strong>Skills</strong><div class="corner corner-left corner-top"></div>
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                     </div>
@@ -140,8 +140,18 @@
                     <div class="about-me">
                         <h4>Aliaksandr Stukachou</h4>
                         <h1>Back-end & Front-end Developer from Belarus</h1>
-                        <p>Etiam ornare eros nisl, et malesuada dui elementum sit amet. Donec placerat dictum erat, a lobortis eros tempor nec. Maecenas ultrices ipsum nec tempor imperdiet. Pellentesque eget lacus id ante facilisis faucibus. Ut sapien leo, aliquet at sem sit amet, dictum auctor sapien.</p>
-                        <p>Pellentesque eget lacus id ante facilisis faucibus. Ut sapien leo, aliquet at sem sit amet, dictum auctor sapien.</p>
+                        <p>
+                            Hi.
+                        </p>
+                        <p>
+                            My name is Alexander. I’m a back-end and front-end developer from Belarus. This website presents the projects, which I was working on during the last years. Some of the websites, represented here, were implemented fully by myself, the others were developed by the team of developers I was a part of. Some of the websites were developed from scratch, some were finished off.
+                        </p>
+                        <p>
+                            One of the main lines of my developing activities is EpiServer. The majority of the EpiServer projects implemented individual customer requirements, creating and modernization of the components. Besides creating components, I also implemented complex intersystem data migration algorithms and search for storage solutions for data of varying complexity.
+                        </p>
+                        <p>
+                            In my portfolio you can find the profiles of the projects including: the screenshot of the project, the link to the project (if it’s a web-application) and the list of my responsibilities and contributions while implementing the project.
+                        </p>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -223,11 +233,6 @@
                                 <div class="skill-cell advanced">Advanced</div>
                             </div>
                             <div class="skill-row">
-                                <div class="skill-cell">JQuery</div>
-                                <div class="skill-cell"></div>
-                                <div class="skill-cell advanced">Advanced</div>
-                            </div>
-                            <div class="skill-row">
                                 <div class="skill-cell">Angular 2</div>
                                 <div class="skill-cell"></div>
                                 <div class="skill-cell has-exp">has expertise</div>
@@ -240,6 +245,11 @@
                         <h3>Technologies</h3>
 
                         <div class="skill-category">
+                            <div class="skill-row">
+                                <div class="skill-cell">JQuery</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
                             <div class="skill-row">
                                 <div class="skill-cell">ADO.NET</div>
                                 <div class="skill-cell"></div>
@@ -254,6 +264,11 @@
                                 <div class="skill-cell">ASP.NET MVC 4(5)</div>
                                 <div class="skill-cell"></div>
                                 <div class="skill-cell expert">Expert</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">ASP.NET CORE</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
                             </div>
                             <div class="skill-row">
                                 <div class="skill-cell">ASP.NET SignalR</div>
@@ -271,9 +286,9 @@
                                 <div class="skill-cell expert">Expert</div>
                             </div>
                             <div class="skill-row">
-                                <div class="skill-cell">AJAX</div>
+                                <div class="skill-cell">Dapper</div>
                                 <div class="skill-cell"></div>
-                                <div class="skill-cell expert">Expert</div>
+                                <div class="skill-cell advanced">Advanced</div>
                             </div>
                         </div>
                         <div class="clearfix"></div>
@@ -351,61 +366,61 @@
                             <img src="img/pastprject/sama.png" alt="Alternate Text" />
                         </div>
                         <div class="slide-part">
-                            <h2>Project name</h2>
-                            <h3>Company</h3>
+                            <h2>Santa Maria World</h2>
+                            <h3>Santa Maria World</h3>
                             <p>
-                                Etiam ornare eros nisl, et malesuada dui elementum sit amet.
+                                This project includes parts for redesigning current site. It's designed for the sales of spicies and viewing recipes.
                             </p>
                         </div>
                         <div class="slide-part participations">
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
+                            <li>Redisignin old site parts</li>
+                            <li>System od data migration</li>
+                            <li>Localization system</li>
+                            <li>Edit mode</li>
+                            <li>Find integration</li>
                         </div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="slide-section">
                         <div class="slide-part">
-                            <img src="img/pastprject/sama.png" alt="Alternate Text" />
+                            <img src="img/pastprject/anli.png" alt="Alternate Text" />
                         </div>
                         <div class="slide-part">
-                            <h2>Project name</h2>
-                            <h3>Company</h3>
+                            <h2>Analytic</h2>
+                            <h3>analytic.li</h3>
                             <p>
-                                Etiam ornare eros nisl, et malesuada dui elementum sit amet.
+                               This project consists of a web application, a web api , an authorization server, mobile applications. The functionality of this project is designed for the spheres of economy and business.
                             </p>
                         </div>
                         <div class="slide-part participations">
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
+                            <li>Authorization server</li>
+                            <li>Filtring system</li>
+                            <li>Security system</li>
+                            <li>Developed secured resorces</li>
+                            <li>Profile system</li>
                         </div>
                         <div class="clearfix"></div>
+                    
                     </div>
                     <div class="slide-section">
                         <div class="slide-part">
-                            <img src="img/pastprject/sama.png" alt="Alternate Text" />
+                            <img src="img/pastprject/s2s.png" alt="Alternate Text" />
                         </div>
                         <div class="slide-part">
-                            <h2>Project name</h2>
-                            <h3>Company</h3>
+                            <h2>Startup to students</h2>
+                            <h3>S2S</h3>
                             <p>
-                                Etiam ornare eros nisl, et malesuada dui elementum sit amet.
+                                It is aimed at solving the extremely urgent modern problem - self-employment, vocational guidance and adaptation to changing conditions on the labor market. Being, on the one hand, a social project, in the future it can become more interesting for advertisers, which will expand the financial possibilities of the project tinitiators and give a new impulse to platform development.
                             </p>
                         </div>
                         <div class="slide-part participations">
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
-                            <li>do something</li>
+                            <li>Profile system</li>
+                            <li>Identity</li>
+                            <li>Past project</li>
+                            <li>Project searching system</li>
                         </div>
                         <div class="clearfix"></div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -416,9 +431,9 @@
             <div class="contact-section">
                 <h2>Find me</h2>
                 <div class="social">
-                    <a href="#" class="facebook"></a>
-                    <a href="#" class="vk"></a>
-                    <a href="#" class="linkedin"></a>
+                    <a href="https://www.facebook.com/alexander.stukachov" class="facebook"></a>
+                    <a href="https://vk.com/stalkermanru" class="vk"></a>
+                    <a href="https://www.linkedin.com/in/aliaksandr-stukachou-3277b2128" class="linkedin"></a>
                     <a href="#" class="gmail"></a>
                 </div>
 
@@ -427,9 +442,9 @@
                 <h2>
                     My contacts
                 </h2>
-                <li>+375 (29) 665 55 25</li>
-                <li>+375 (29) 474 55 88</li>
-                <li>sansanetch@gamil.com</li>
+                <li>+375 (29) 636 06 03</li>
+                <li>+375 (33) 393 60 92</li>
+                <li>sansanetch@gmail.com</li>
             </div>
         </div>
         <div class="copyright">&copy; Aliaksandr Stukachou</div>
@@ -583,11 +598,7 @@
 
             });
             $(document).on('wheel', '', function (e) {
-                if (isExecuted) {
-                    e.preventDefault();
-                }
                 if (!isExecuted && e.originalEvent.wheelDelta / 120 < 0 && Math.abs($('.first-section')[0].getBoundingClientRect().top) < $($('.first-section')[0]).height()) {
-                    e.preventDefault();
                     $('body,html').animate({ scrollTop: $($('.first-section')[0]).height() }, 500, function () {
                         isExecuted = false;
                     });
