--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </div>
                     <div class="slide-section">
                         <div class="slide-part">
-                            <img src="img/pastprject/anli.png" alt="Alternate Text" />
+                            <img src="img/pastprject/anli.PNG" alt="Alternate Text" />
                         </div>
                         <div class="slide-part">
                             <h2>Analytic</h2>
@@ -404,7 +404,7 @@
                     </div>
                     <div class="slide-section">
                         <div class="slide-part">
-                            <img src="img/pastprject/s2s.png" alt="Alternate Text" />
+                            <img src="img/pastprject/s2s.PNG" alt="Alternate Text" />
                         </div>
                         <div class="slide-part">
                             <h2>Startup to students</h2>
